--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,9 @@ favicon: "https://github.com/zyyjade.png?size=40"
 # your website url
 url: https://zyyjade.github.io
 
+# github profile url
+github: "https://github.com/zyyjade"
+
 # footer message
 footer: © 2022-2022 @zyyjade
 
