--- a/config.yml
+++ b/config.yml
@@ -10,9 +10,6 @@ favicon: "https://github.com/zyyjade.png?size=40"
 # your website url
 url: https://zyyjade.github.io
 
-# github profile url
-github: "https://github.com/zyyjade"
-
 # footer message
 footer: © 2022-2022 @zyyjade
 
@@ -38,7 +35,7 @@ webstack:
 
 content:
   categories:
-    - name: 常用推荐
+    - name: 在线设计
       sites:
         - name: Dribbble
           description: 全球UI设计师作品分享平台。
