--- a/config.yml
+++ b/config.yml
@@ -10,9 +10,6 @@ favicon: "https://github.com/zyyjade.png?size=40"
 # your website url
 url: https://zyyjade.github.io
 
-# github profile url
-github: "https://github.com/zyyjade"
-
 # footer message
 footer: © 2022-2022 @zyyjade
 
@@ -38,93 +35,40 @@ webstack:
 
 content:
   categories:
-    - name: 在线设计
+    - name: 设计·创意
       sites:
-        - name: Dribbble
-          description: 全球UI设计师作品分享平台。
-          url: https://dribbble.com/
-        - name: Behance
-          description: Adobe旗下的设计师交流平台，来自世界各地的设计师在这里分享自己的作品。
-          url: https://behance.net/
-        - name: UI中国
-          description: 图形交互与界面设计交流、作品展示、学习平台。
-          url: http://www.ui.cn/
-        - name: 站酷
-          description: 中国人气设计师互动平台
-          url: http://www.zcool.com.cn/
-        - name: Pinterest
-          description: 全球美图收藏采集站
-          url: https://www.pinterest.com/
+        - name: 90设计
+          description: 电商设计模板、PNG素材和背景图免费下载
+          url: https://90sheji.com/
+        - name: PS家园
+          description: PS教程/PS笔刷/滤镜/PS素材
+          url: https://www.psjia.com/
         - name: 花瓣
           description: 收集灵感,保存有用的素材
           url: http://huaban.com/
         - name: 优设
           description: 设计师交流学习平台
           url: http://www.uisdc.com/
-        - name: Producthunt
-          description: 发现新鲜有趣的产品
-          url: https://www.producthunt.com/
-        - name: Youtube
-          description: 全球最大的学习分享平台
-          url: https://www.youtube.com/
-        - name: Google
-          description: 全球最大的UI学习分享平台
-          url: https://www.google.com/
-        - name: Medium
-          description: Read, write and share stories that matter
-          url: https://medium.com/
-    - name: 界面灵感
+        - name: 站酷
+          description: 中国人气设计师互动平台
+          url: http://www.zcool.com.cn/
+    - name: 设计·素材
       sites:
-        - name: 咕噜素材
-          description: 质量很高的设计素材网站（推荐）
-          url: https://www.gulusucai.com/
-        - name: 设计周刊
-          description: 最新设计资讯（每天更新）
-          url: https://www.shejizhoukan.com/
-        - name: 字体仓库
-          description: 最全的免费商用字体库
-          url: https://www.ziticangku.com/
-        - name: 电鸭社区
-          description: 国内最早的远程工作社区，也是互联网工作者们的聚集地，非常适合设计开发小伙伴关注
-          url: https://eleduck.com/
-    - name: 社区资讯
-      sites:
-        - name: 雷锋网
-          description: 人工智能和智能硬件领域的互联网科技媒体
-          url: https://www.leiphone.com/
-        - name: 36kr
-          description: 创业资讯、科技新闻
-          url: http://36kr.com/
-        - name: 数英网
-          description: 数字媒体及职业招聘网站
-          url: https://www.digitaling.com/
-        - name: 猎云网
-          description: 互联网创业项目推荐和创业创新资讯
-          url: http://www.lieyunwang.com/
-        - name: 人人都是产品经理
-          description: 产品经理、产品爱好者学习交流平台
-          url: http://www.woshipm.com/
-        - name: 互联网早读课
-          description: 互联网行业深度阅读与学习平台
-          url: https://www.zaodula.com/
-        - name: 产品壹佰
-          description: 为产品经理爱好者提供最优质的产品资讯、原创内容和相关视频课程
-          url: http://www.chanpin100.com/
-        - name: PMCAFF
-          description: 中国第一产品经理人气组织，专注于研究互联网产品
-          url: http://www.pmcaff.com/
-        - name: 爱运营
-          description: 网站运营人员学习交流，专注于网站产品运营管理、淘宝运营。
-          url: http://www.iyunying.org/
-        - name: 鸟哥笔记
-          description: 移动互联网第一干货平台
-          url: http://www.niaogebiji.com/
-        - name: 古田路9号
-          description: 国内专业品牌创意平台
-          url: http://www.gtn9.com/
-        - name: 优阁网
-          description: UI设计师学习交流社区
-          url: http://www.uigreat.com/
+        - name: 365PSD
+          description: PSD、图形和矢量文件免费下载
+          url: https://365psd.com/
+        - name: CleanPNG
+          description: 高清PNG图像和插图免费下载
+          url: https://www.cleanpng.com/
+        - name: unDraw
+          description: 免费插图下载
+          url: https://undraw.co/illustrations
+        - name: Vectorhq
+          description: 免费矢量图形和PSD文件
+          url: https://cn.vectorhq.com/
+        - name: 火柴人
+          description: 火柴人插图免费下载
+          url: https://pictogram2.com/?paged=2&lang=en
     - name: 发现产品
       sites:
         - name: NEXT
@@ -257,10 +201,7 @@ content:
       sites:
         - name: wallhalla
           description: Find awesome high quality wallpapers for desktop and mobile in one place.
-          url: https://wallhalla.com/
-        - name: 365PSD
-          description: Free PSD & Graphics, Illustrations
-          url: https://365psd.com/
+          url: https://wallhalla.com
         - name: Medialoot
           description: Free & Premium Design Resources — Medialoot
           url: https://medialoot.com/
