--- a/config.yml
+++ b/config.yml
@@ -531,10 +531,10 @@ content:
           url: https://wangyasai.github.io/designtools.html
     - name: 其他网站
       sites:
-        - name: 阿虚同学的储物间
+        - name: 阿虚同学的储物间👍
           description: 网络干货
           url: https://axutongxue.com/
-        - name: 奔跑中的奶酪
+        - name: 奔跑中的奶酪👍
           description: 网络干货
           url: https://www.runningcheese.com/overview
         - name: IP管家
